--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@strapi/plugin-users-permissions": "4.7.1",
     "@strapi/provider-upload-cloudinary": "^4.7.1",
     "@strapi/strapi": "4.7.1",
+    "cloudinary": "^1.35.0",
+    "cors": "^2.8.5",
     "pg": "8.8.0"
   },
   "author": {
