--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "cloudinary": "^1.35.0",
     "cors": "^2.8.5",
     "koa-cache-control": "^2.0.0",
-    "pg": "8.8.0"
+    "pg": "8.8.0",
+    "yup": "^1.0.2"
   },
   "author": {
     "name": "A Strapi developer"
