--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@strapi/strapi": "4.7.1",
     "cloudinary": "^1.35.0",
     "cors": "^2.8.5",
-    "pg": "8.8.0"
+    "pg": "8.8.0",
+    "stripe": "^11.16.0"
   },
   "author": {
     "name": "A Strapi developer"
